# OpenMagFDM

./: .gitignore  CMakeLists.txt  LICENCE  MagFDMsolver  MagFDMsolver.cpp  MagneticFieldAnalyzer.cpp  MagneticFieldAnalyzer.h  MagneticFieldAnalyzer_nonlinear.cpp  MagneticFieldAnalyzer_nonlinear_newton.cpp  README.md  analyze_boundary_types.py  analyze_radial_boundaries.py  analyze_radial_line_fields.py  analyze_torque.py  analyze_torque_detailed.py  benchmark.md  check_core_position.py  cmake_install.cmake  create_test_image.py  nonlinear_material_spec.yaml  sample_config.yaml  sample_config_test.yaml  sample_material_lib.yaml  test_coarsen.yaml  test_nonlinear.yaml  torque_timeseries.csv  vcpkg.json
.doc/: RELEASE_NOTES_v1.3.0.md  phase6_newton_convergence.md  remaining_tasks.md
.github/workflows/: release.yml
configs/user_nak0ulbnr/: sample_config.yaml  test_newton_cartesian.yaml  test_newton_polar.yaml
docs/: RELEASE_NOTES_v1.2.0.md  coarsening_convergence_improvement.md
scripts/: README_visualization.md  mag_analyzer.jl  mag_analyzer.py  visualize_results.py
tinyexpr/: README.md  TinyExprChanges.md
webui/: README.md  package-lock.json  package.json  server.js
webui/icon/: LICENSE
webui/public/: app.js  dashboard.html  dashboard.js  index.html  integrated.html  integrated.js  material_image.js  yaml-schema.json
